[gd_scene load_steps=4 format=3 uid="uid://bp5f3hmxacaqi"]

[ext_resource type="Script" uid="uid://d3xgmdujcke3m" path="res://hud.gd" id="1_efote"]
[ext_resource type="Texture2D" uid="uid://ci7bqj1hl80ve" path="res://art/cristian-palmer-XexawgzYOBc-unsplash.jpg" id="2_ne771"]
[ext_resource type="FontFile" uid="uid://b53p8162s1mf7" path="res://fonts/Xolonium-Regular.ttf" id="2_vow1y"]

[node name="Node2D" type="Node2D"]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("1_efote")

[node name="Sprite2D" type="Sprite2D" parent="HUD"]
position = Vector2(984.9999, 580)
scale = Vector2(0.54825, 0.40616664)
texture = ExtResource("2_ne771")

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -39.0
offset_right = 960.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 64
text = "Fishing!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="HUD"]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -500.0
offset_right = 100.0
offset_bottom = -400.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 64
text = "Start"

[connection signal="timeout" from="HUD/MessageTimer" to="HUD" method="_on_message_timer_timeout"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_button_pressed"]
